Adding OKTA API Authentication and updating copyright headers.
